feat: add services and repository with basic auth
